@@ -3,6 +3,12 @@ Version (CVS)
 -------------
 XML:	Numerous bug fixes in Schema Object Model and Validation code (Arnaud)
 
+XML:    Added support to the Schema Object Model for a number of XML Schema
+        attributes / properties such as elementFormDefault, form, 
+        attributeFormDefault, abstract, id...etc that were previously not
+        read in from the XML Schema. Validation still needs to be updated,
+        as well as the source code generator (kvisco - 20011129, 20011205)
+
 XML:    Added support for the extremely powerful 'handler' attribute on
         the field element for the mapping (kvisco - 20011205)
 
